--- a/visualizations/wind.html
+++ b/visualizations/wind.html
@@ -18,6 +18,34 @@
 
   <body>
     <!-- Start of navbar -->
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">Latitude</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">  
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="visualizations/temp.html">Max Temperature</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="visualizations/humidity.html">humidity</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="visualizations/wind.html">Wind speed</a>
+              </div>
+            </li>
+            <li class="nav-item"><a class="nav-link active" href="comparison.html">Comparison</a></li>
+            <li class="nav-item"><a class="nav-link active" href="data.html">Data</a></li>
+            <li><a href="">    </a></li> 
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- End of navbar -->
 
     <!-- Start of container -->
@@ -27,11 +55,10 @@
 
     <!-- End of container -->
 
-    <!-- jQuery CDN -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
-    <!-- Bootstrap CDN -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  </body>
+   <!-- Bootstrap CDN -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+   <script> src="include.js" </script>
+   
+ </body>
 
 </html>
