fixed images and all links

--- a/comparison.html
+++ b/comparison.html
@@ -20,7 +20,7 @@
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Latitude</a>
+        <a class="navbar-brand" href="index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,6 +48,25 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="clearfix">
+          <header class="header"> 
+            <h1>Comparison: Latitude vs X</h1>
+          </header>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-md-12">  
+            <hr class="style1">
+          </div>
+        </div>
+      <p class="p1">  
+        Click any plot to get an in-depth analysis.
+      </p>
+    </div>
     <!-- End of container -->
 
     <!-- Bootstrap CDN -->
