--- a/visualizations/wind.html
+++ b/visualizations/wind.html
@@ -21,7 +21,7 @@
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Latitude</a>
+        <a class="navbar-brand" href="../index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,17 +30,17 @@
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="visualizations/temp.html">Max Temperature</a>
+                <a class="dropdown-item" href="temp.html">Max Temperature</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="visualizations/humidity.html">humidity</a>
+                <a class="dropdown-item" href="humidity.html">humidity</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="visualizations/wind.html">Wind speed</a>
+                <a class="dropdown-item" href="wind.html">Wind speed</a>
               </div>
             </li>
-            <li class="nav-item"><a class="nav-link active" href="comparison.html">Comparison</a></li>
-            <li class="nav-item"><a class="nav-link active" href="data.html">Data</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../comparison.html">Comparison</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../data.html">Data</a></li>
             <li><a href="">    </a></li> 
           </ul>
         </div>
