--- a/comparison.html
+++ b/comparison.html
@@ -31,7 +31,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="visualizations/temp.html">Max Temperature</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="visualizations/humidity.html">humidity</a>
+                <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
                 <div class="dropdown-divider"></div>
