--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -32,7 +32,7 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="temp.html">Max Temperature</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="humidity.html">humidity</a>
+                <a class="dropdown-item" href="humidity.html">Humidity</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                 <div class="dropdown-divider"></div>
