--- a/landing_page.html
+++ b/landing_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bootstrap Visualization Dashboard</title>
+    <title>Zack's Bootstrap Visualization Dashboard</title>
 
     <!-- Boostrap Stylesheet -->
     <!-- Import stylesheet for Theme "Mint" -->
@@ -21,7 +21,7 @@
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="landing_page.html">Latitude</a>
+        <a class="navbar-brand" href="landing_page.html">Latitude</a>  
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,7 +50,7 @@
     <!-- Start of container -->
   <div class="container">
 
-    <div class="row">
+    <div class="row"> 
       <div class="col-sm-7">
         <div class="clearfix">
         <header class="header"> 
@@ -76,9 +76,9 @@
       
       <div class="col-sm-5"
         <article id="imageNav_article">
-        <!-- Start of Visualizations imageNav Area -->
+          <!-- Start of Visualizations imageNav Area -->
           <div class="imageNav_box">
-          <!-- Add vis header -->
+            <!-- Add vis header -->
               <header class="header"><h1>Visualizations</h1></header>
               <hr class="style1">
             <!-- Add images in 2x2 grid -->
