--- a/landing_page.html
+++ b/landing_page.html
@@ -51,7 +51,7 @@
   <div class="container">
 
     <div class="row"> 
-      <div class="col-sm-7">
+      <div class="col-md-7 col-sm-12">
         <div class="clearfix">
         <header class="header"> 
           <h1>Summary: Latitude vs. X</h1>
@@ -74,7 +74,7 @@
         </article> <!-- article -->
       </div> <!-- col-sm-7 -->
       
-      <div class="col-sm-5"
+      <div class="col-md-5 col-sm-12" 
         <article id="imageNav_article">
           <!-- Start of Visualizations imageNav Area -->
           <div class="imageNav_box">
