Cleaned up visuals

--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -78,7 +78,7 @@
               <div id="plots">
                 <a href="temp.html"><img src="../assets/images/Fig1.png" class="imageNav_plot" alt="Lat x Max Temp"></a>
                 <a href="humidity.html"><img src="../assets/images/Fig2.png" class="imageNav_plot" alt="Lat x Humidity"></a>
-                <a href="cloudiness.html"><img src="../assets/images/Fig3.png" class="imageNav_plot" alt="Lat x Cloudiness" ></a>
+                <a href="cloudiness.html"><img src="../assets/images/Fig3.png" class="imageNav_plot active" alt="Lat x Cloudiness" ></a>
                 <a href="wind.html"><img src="../assets/images/Fig4.png" class="imageNav_plot"alt="Lat x Wind Speed"></a> 
               </div>                  
             </div>  <!-- imageNav_box -->
