--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -76,7 +76,7 @@
                 <hr class="style1">
               <!-- Add images in 2x2 grid -->
               <div id="plots">
-                <a href="temp.html"><img src="../assets/images/Fig1.png" class="imageNav_plot" alt="Lat x Max Temp"></a>
+                <a href="temp.html"><img src="../assets/images/Fig1.png" class="imageNav_plot active" alt="Lat x Max Temp"></a>
                 <a href="humidity.html"><img src="../assets/images/Fig2.png" class="imageNav_plot" alt="Lat x Humidity"></a>
                 <a href="cloudiness.html"><img src="../assets/images/Fig3.png" class="imageNav_plot" alt="Lat x Cloudiness" ></a>
                 <a href="wind.html"><img src="../assets/images/Fig4.png" class="imageNav_plot"alt="Lat x Wind Speed"></a> 
